Add missing files and projects and unify the net version under 7.0

--- a/Top10ContentWords/Web.config
+++ b/Top10ContentWords/Web.config
@@ -1,56 +1,47 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-	<appSettings>
-		<add key="DownloadBaseUrl" value="https://localhost:7152" />
-	</appSettings>
+  <appSettings>
+    <add key="DownloadBaseUrl" value="https://localhost:7152"/>
+  </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
-	<system.web>
-		<compilation debug="true" targetFramework="4.8" />
-		<httpRuntime targetFramework="4.8" />
-	</system.web>
-
-	<system.serviceModel>
-		<services>
-			<service name="Top10ContentWords.Services.TextAnalytics"
-					 behaviorConfiguration="svcBehavior">
-				<endpoint address=""
-						  binding="basicHttpBinding"
-						  bindingConfiguration="basicHttp"
-						  contract="Top10ContentWords.Services.ITextAnalytics" />
-				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-				<host>
-					<baseAddresses>
-						<add baseAddress="http://localhost:53820/Services/TextAnalytics.svc"/>
-					</baseAddresses>
-				</host>
-			</service>
-		</services>
-
-		<bindings>
-			<basicHttpBinding>
-				<binding name="basicHttp"
-						 maxReceivedMessageSize="2097152"
-						 openTimeout="00:00:05"
-						 closeTimeout="00:00:05"
-						 sendTimeout="00:00:10"
-						 receiveTimeout="00:00:10">
-					<readerQuotas maxDepth="64"
-								  maxArrayLength="2097152"
-								  maxStringContentLength="2097152" />
-				</binding>
-			</basicHttpBinding>
-		</bindings>
-
-		<behaviors>
-			<serviceBehaviors>
-				<behavior name="svcBehavior">
-					<serviceMetadata httpGetEnabled="true" />
-					<serviceDebug includeExceptionDetailInFaults="true" />
-				</behavior>
-			</serviceBehaviors>
-		</behaviors>
-
-		<serviceHostingEnvironment aspNetCompatibilityEnabled="true"
-								   multipleSiteBindingsEnabled="true" />
-	</system.serviceModel>
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.7" />
+      </system.Web>
+  -->
+  <system.web>
+    <compilation debug="true" targetFramework="4.7"/>
+    <httpRuntime targetFramework="4.7"/>
+  </system.web>
+  <system.serviceModel>
+    <services>
+      <service name="Top10ContentWords.Services.TextAnalytics" behaviorConfiguration="svcBehavior">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttp" contract="Top10ContentWords.Services.ITextAnalytics"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:53820/Services/TextAnalytics.svc"/>
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="basicHttp" maxReceivedMessageSize="2097152" openTimeout="00:00:05" closeTimeout="00:00:05" sendTimeout="00:00:10" receiveTimeout="00:00:10">
+          <readerQuotas maxDepth="64" maxArrayLength="2097152" maxStringContentLength="2097152"/>
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="svcBehavior">
+          <serviceMetadata httpGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
+  </system.serviceModel>
 </configuration>
