--- a/WcfService1/Web.config
+++ b/WcfService1/Web.config
@@ -13,7 +13,7 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.7"/>
-    <customErrors mode="Off"/>
+    <httpRuntime targetFramework="4.7"/>
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -33,9 +33,6 @@
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
-    <handlers>
-      <add name=".svc" verb="*" path="*.svc" type="System.ServiceModel.Activation.ServiceHttpHandlerFactory,     System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral,     PublicKeyToken=31bf3856ad364e35"/>
-    </handlers>
     <!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
