Unify Volodymyr's and Vlad's UI under one web app

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -86,6 +86,7 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IService1" />
+        <binding name="BasicHttpBinding_ITextAnalytics" />
       </basicHttpBinding>
     </bindings>
     <behaviors>
@@ -111,7 +112,12 @@
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
     <!-- Client configuration from Assignment 3 -->
     <client>
-      <endpoint address="http://localhost:56570/Service1.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReference1.IService1" name="BasicHttpBinding_IService1" />
+      <endpoint address="http://localhost:56570/Service1.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReference1.IService1"
+        name="BasicHttpBinding_IService1" />
+      <endpoint address="http://localhost:50401/Services/TextAnalytics.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITextAnalytics"
+        contract="Top10Svc.ITextAnalytics" name="BasicHttpBinding_ITextAnalytics" />
     </client>
   </system.serviceModel>
   <system.codedom>
