--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.Extensions" />
@@ -100,6 +101,13 @@
     <None Include="Connected Services\ServiceReference1\configuration91.svcinfo" />
     <None Include="Connected Services\ServiceReference1\configuration.svcinfo" />
     <None Include="Connected Services\ServiceReference1\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\Top10Svc\TextAnalytics.disco" />
+    <None Include="Connected Services\Top10Svc\configuration91.svcinfo" />
+    <None Include="Connected Services\Top10Svc\configuration.svcinfo" />
+    <None Include="Connected Services\Top10Svc\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
@@ -140,6 +148,16 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Connected Services\Top10Svc\TextAnalytics.wsdl" />
+    <None Include="Connected Services\Top10Svc\TextAnalytics.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\Top10Svc\TextAnalytics1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\Top10Svc\TextAnalytics2.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -169,6 +187,11 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
     <Content Include="Staff.aspx" />
+    <Content Include="TryIt\GeoResolve_TryIt.aspx" />
+    <Content Include="TryIt\Hash_TryIt.aspx" />
+    <Content Include="TryIt\ThreatNLP_TryIt.aspx" />
+    <Content Include="TryIt\Top10_TryIt.aspx" />
+    <Content Include="TryIt\WebDownload_TryIt.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -184,6 +207,11 @@
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Connected Services\ServiceReference1\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\Top10Svc\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -241,6 +269,41 @@
     <Compile Include="Staff.aspx.designer.cs">
       <DependentUpon>Staff.aspx</DependentUpon>
     </Compile>
+    <Compile Include="TryIt\GeoResolve_TryIt.aspx.cs">
+      <DependentUpon>GeoResolve_TryIt.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TryIt\GeoResolve_TryIt.aspx.designer.cs">
+      <DependentUpon>GeoResolve_TryIt.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TryIt\Hash_TryIt.aspx.cs">
+      <DependentUpon>Hash_TryIt.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TryIt\Hash_TryIt.aspx.designer.cs">
+      <DependentUpon>Hash_TryIt.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TryIt\ThreatNLP_TryIt.aspx.cs">
+      <DependentUpon>ThreatNLP_TryIt.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TryIt\ThreatNLP_TryIt.aspx.designer.cs">
+      <DependentUpon>ThreatNLP_TryIt.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TryIt\Top10_TryIt.aspx.cs">
+      <DependentUpon>Top10_TryIt.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TryIt\Top10_TryIt.aspx.designer.cs">
+      <DependentUpon>Top10_TryIt.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TryIt\WebDownload_TryIt.aspx.cs">
+      <DependentUpon>WebDownload_TryIt.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TryIt\WebDownload_TryIt.aspx.designer.cs">
+      <DependentUpon>WebDownload_TryIt.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -292,8 +355,13 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\ServiceReference1\" />
+    <WCFMetadataStorage Include="Connected Services\Top10Svc\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AAI_Utils\AAI_Utils.csproj">
+      <Project>{51972f79-0e62-4e40-bebe-cea00d067be7}</Project>
+      <Name>AAI_Utils</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LocalComponents\LocalComponents.csproj">
       <Project>{16dfcafd-7052-ad5f-50ca-9ed72b8d6642}</Project>
       <Name>LocalComponents</Name>
