Add Dmytro's UI

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -87,6 +87,7 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IService1" />
         <binding name="BasicHttpBinding_ITextAnalytics" />
+        <binding name="BasicHttpBinding_IPokerBotService" />
       </basicHttpBinding>
     </bindings>
     <behaviors>
@@ -110,7 +111,6 @@
       </service>
     </services>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
-    <!-- Client configuration from Assignment 3 -->
     <client>
       <endpoint address="http://localhost:56570/Service1.svc" binding="basicHttpBinding"
         bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReference1.IService1"
@@ -118,6 +118,9 @@
       <endpoint address="http://localhost:50401/Services/TextAnalytics.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITextAnalytics"
         contract="Top10Svc.ITextAnalytics" name="BasicHttpBinding_ITextAnalytics" />
+      <endpoint address="http://localhost:55613/PokerBotService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPokerBotService"
+        contract="PokerBotServiceReference.IPokerBotService" name="BasicHttpBinding_IPokerBotService" />
     </client>
   </system.serviceModel>
   <system.codedom>
