--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -97,6 +97,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <None Include="Connected Services\PokerBotServiceReference\PokerBotService.wsdl" />
+    <None Include="Connected Services\PokerBotServiceReference\PokerBotService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PokerBotServiceReference\PokerBotService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PokerBotServiceReference\PokerBotService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="Connected Services\PokerBotServiceReference\WebApplication1.PokerBotServiceReference.BotDecisionResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Connected Services\ServiceReference1\Service1.disco" />
     <None Include="Connected Services\ServiceReference1\configuration91.svcinfo" />
     <None Include="Connected Services\ServiceReference1\configuration.svcinfo" />
@@ -108,6 +121,13 @@
     <None Include="Connected Services\Top10Svc\configuration91.svcinfo" />
     <None Include="Connected Services\Top10Svc\configuration.svcinfo" />
     <None Include="Connected Services\Top10Svc\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\PokerBotServiceReference\PokerBotService.disco" />
+    <None Include="Connected Services\PokerBotServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\PokerBotServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\PokerBotServiceReference\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
@@ -142,6 +162,8 @@
     <None Include="Connected Services\ServiceReference1\Service11.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="PlayerDeckView.ascx" />
+    <Content Include="PlayerMoneyView.ascx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -206,6 +228,11 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Connected Services\PokerBotServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\ServiceReference1\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -246,6 +273,20 @@
     </Compile>
     <Compile Include="Member.aspx.designer.cs">
       <DependentUpon>Member.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PlayerDeckView.ascx.cs">
+      <DependentUpon>PlayerDeckView.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PlayerDeckView.ascx.designer.cs">
+      <DependentUpon>PlayerDeckView.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="PlayerMoneyView.ascx.cs">
+      <DependentUpon>PlayerMoneyView.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PlayerMoneyView.ascx.designer.cs">
+      <DependentUpon>PlayerMoneyView.ascx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
@@ -354,6 +395,7 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\PokerBotServiceReference\" />
     <WCFMetadataStorage Include="Connected Services\ServiceReference1\" />
     <WCFMetadataStorage Include="Connected Services\Top10Svc\" />
   </ItemGroup>
