--- a/PokerBot/Web.config
+++ b/PokerBot/Web.config
@@ -15,23 +15,27 @@
     <compilation debug="true" targetFramework="4.7"/>
     <customErrors mode="Off"/>
   </system.web>
-  <system.serviceModel>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
-    <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https"/>
-    </protocolMapping>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
-  </system.serviceModel>
-  <system.webServer>
+	<system.serviceModel>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior>
+					<!-- metadata only over HTTP -->
+					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="false" />
+					<serviceDebug includeExceptionDetailInFaults="true" />
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+
+		<!-- use basicHttpBinding for http -->
+		<protocolMapping>
+			<add binding="basicHttpBinding" scheme="http" />
+		</protocolMapping>
+
+		<serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+								   multipleSiteBindingsEnabled="true" />
+	</system.serviceModel>
+
+	<system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
     <handlers>
       <add name=".svc" verb="*" path="*.svc" type="System.ServiceModel.Activation.ServiceHttpHandlerFactory,     System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral,     PublicKeyToken=31bf3856ad364e35"/>
