--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -107,6 +107,8 @@
     <None Include="Connected Services\PokerBotServiceReference\PokerBotService2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="App_Data\Members.xml" />
+    <Content Include="App_Data\Staff.xml" />
     <Content Include="Connected Services\PokerBotServiceReference\WebApplication1.PokerBotServiceReference.BotDecisionResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
@@ -164,6 +166,7 @@
     </None>
     <Content Include="PlayerDeckView.ascx" />
     <Content Include="PlayerMoneyView.ascx" />
+    <Content Include="Register.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -219,6 +222,7 @@
     <Content Include="Bundle.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountStore.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
       <DependentUpon>About.aspx</DependentUpon>
@@ -289,6 +293,13 @@
       <DependentUpon>PlayerMoneyView.ascx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Register.aspx.cs">
+      <DependentUpon>Register.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Register.aspx.designer.cs">
+      <DependentUpon>Register.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -354,7 +365,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="ServiceReference1\" />
   </ItemGroup>
   <ItemGroup>
