Use deployed WcfService1

--- a/WcfService1/Web.config
+++ b/WcfService1/Web.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
-  </appSettings>
-  <!--
+	<appSettings>
+		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+	</appSettings>
+	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -11,32 +11,39 @@
         <httpRuntime targetFramework="4.7" />
       </system.Web>
   -->
-  <system.web>
-    <compilation debug="true" targetFramework="4.7"/>
-    <httpRuntime targetFramework="4.7"/>
-  </system.web>
-  <system.serviceModel>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
-    <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https"/>
-    </protocolMapping>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
-  </system.serviceModel>
-  <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
-    <!--
+	<system.web>
+		<compilation debug="true"/>
+		<customErrors mode="Off"/>
+	</system.web>
+	<system.serviceModel>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior>
+					<!-- metadata only over HTTP -->
+					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="false" />
+					<serviceDebug includeExceptionDetailInFaults="true" />
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+
+		<!-- use basicHttpBinding for http -->
+		<protocolMapping>
+			<add binding="basicHttpBinding" scheme="http" />
+		</protocolMapping>
+
+		<serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+								   multipleSiteBindingsEnabled="true" />
+	</system.serviceModel>
+
+	<system.webServer>
+		<modules runAllManagedModulesForAllRequests="true"/>
+		<handlers>
+			<add name=".svc" verb="*" path="*.svc" type="System.ServiceModel.Activation.ServiceHttpHandlerFactory,     System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral,     PublicKeyToken=31bf3856ad364e35"/>
+		</handlers>
+		<!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
       -->
-    <directoryBrowse enabled="true"/>
-  </system.webServer>
+		<directoryBrowse enabled="true"/>
+	</system.webServer>
 </configuration>
