--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -112,7 +112,7 @@
     </services>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
     <client>
-      <endpoint address="http://localhost:56570/Service1.svc" binding="basicHttpBinding"
+      <endpoint address="http://webstrar10.fulton.asu.edu/page10/Service1.svc" binding="basicHttpBinding"
         bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReference1.IService1"
         name="BasicHttpBinding_IService1" />
       <endpoint address="http://localhost:50401/Services/TextAnalytics.svc"
