Use deployed Top10ContentWords

--- a/Top10ContentWords/Web.config
+++ b/Top10ContentWords/Web.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-  <appSettings>
-    <add key="DownloadBaseUrl" value="https://localhost:7152"/>
-  </appSettings>
-  <!--
+	<appSettings>
+		<add key="DownloadBaseUrl" value="https://localhost:7152"/>
+		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+	</appSettings>
+	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -11,37 +12,39 @@
         <httpRuntime targetFramework="4.7" />
       </system.Web>
   -->
-  <system.web>
-    <compilation debug="true" targetFramework="4.7"/>
-    <httpRuntime targetFramework="4.7"/>
-  </system.web>
-  <system.serviceModel>
-    <services>
-      <service name="Top10ContentWords.Services.TextAnalytics" behaviorConfiguration="svcBehavior">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttp" contract="Top10ContentWords.Services.ITextAnalytics"/>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:53820/Services/TextAnalytics.svc"/>
-          </baseAddresses>
-        </host>
-      </service>
-    </services>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="basicHttp" maxReceivedMessageSize="2097152" openTimeout="00:00:05" closeTimeout="00:00:05" sendTimeout="00:00:10" receiveTimeout="00:00:10">
-          <readerQuotas maxDepth="64" maxArrayLength="2097152" maxStringContentLength="2097152"/>
-        </binding>
-      </basicHttpBinding>
-    </bindings>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior name="svcBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
-  </system.serviceModel>
+	<system.web>
+		<compilation debug="true"/>
+		<customErrors mode="Off"/>
+	</system.web>
+	<system.serviceModel>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior>
+					<!-- metadata only over HTTP -->
+					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="false" />
+					<serviceDebug includeExceptionDetailInFaults="true" />
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+
+		<!-- use basicHttpBinding for http -->
+		<protocolMapping>
+			<add binding="basicHttpBinding" scheme="http" />
+		</protocolMapping>
+
+		<serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+								   multipleSiteBindingsEnabled="true" />
+	</system.serviceModel>
+
+	<system.webServer>
+		<modules runAllManagedModulesForAllRequests="true"/>
+		<handlers>
+			<add name=".svc" verb="*" path="*.svc" type="System.ServiceModel.Activation.ServiceHttpHandlerFactory,     System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral,     PublicKeyToken=31bf3856ad364e35"/>
+		</handlers>
+		<!--
+        To browse web app root directory during debugging, set the value below to true.
+        Set to false before deployment to avoid disclosing web app folder information.
+      -->
+		<directoryBrowse enabled="true"/>
+	</system.webServer>
 </configuration>
