--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -115,10 +115,10 @@
       <endpoint address="http://webstrar10.fulton.asu.edu/page10/Service1.svc" binding="basicHttpBinding"
         bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReference1.IService1"
         name="BasicHttpBinding_IService1" />
-      <endpoint address="http://localhost:50401/Services/TextAnalytics.svc"
+      <endpoint address="http://webstrar10.fulton.asu.edu/page5/Services/TextAnalytics.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITextAnalytics"
         contract="Top10Svc.ITextAnalytics" name="BasicHttpBinding_ITextAnalytics" />
-      <endpoint address="http://localhost:55613/PokerBotService.svc"
+      <endpoint address="http://webstrar10.fulton.asu.edu/page2/PokerBotService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPokerBotService"
         contract="PokerBotServiceReference.IPokerBotService" name="BasicHttpBinding_IPokerBotService" />
     </client>
