--- a/PokerEngine/Web.config
+++ b/PokerEngine/Web.config
@@ -16,6 +16,7 @@
 	<system.web>
 		<compilation debug="true"  />
 		<httpRuntime  />
+		<customErrors mode="Off"/>
 	</system.web>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
